fix footer overlap; slightly larger logos

--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -8,10 +8,6 @@ html {
   min-height: 100%;
 }
 
-body {
-    margin-bottom: 150px;
-}
-
 .navbar-version {
     display: none;
 }
@@ -215,9 +211,8 @@ div.sidebar {
     width: 100%;
 }
 .footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
+    margin-top: 20px;
 }
 .footer a {
     font-weight: 700;
@@ -377,27 +372,24 @@ dd table.align-center {
 div.institutions {
     text-align: center;
     line-height: 52px;
-    margin-bottom: 8px;
-    padding-left: 5%;
-    padding-right: 5%;
+    margin-bottom: 6px;
   }
 div.institutions a {
     border: 0px;
-    margin-right: 8px;
+    margin-right: 6px;
 }
 .institution_xs .institution_sm .institution_md .institution_lg {
-    margin-right: 6px;
     vertical-align: middle;
   }
   .institution_xs {
-    max-height: 22px;
+    max-height: 24px;
   }
   .institution_sm {
-    max-height: 32px;
+    max-height: 36px;
   }
   .institution_md {
-    max-height: 42px;
+    max-height: 48px;
   }
   .institution_lg {
-    max-height: 52px;
+    max-height: 60px;
   }
